Solving moveTrains()Methods errors for Interlockingimpl.java  autograder tests